--- a/bylaws.tex
+++ b/bylaws.tex
@@ -73,7 +73,7 @@ and provide a healthy collaboration culture that establishes standards for behav
 The CMB-S4 Construction Project (the Project) is distinct from the CMB-S4 Science Collaboration (the Collaboration). The Project will be responsible for final design and construction of CMB-S4, which by necessity will have strong oversight and  report directly to the associated funding agencies and other sources of funding.  The Collaboration and Project must work closely together; many Collaboration members are expected to have important roles within the Project. The Project ends when construction is completed and operations begin. Operations may be the responsibility of the Collaboration, or may be conducted by a distinct entity working closely with the Collaboration. These Bylaws pertain only to the Science Collaboration and do not specify the structure of, or relationship to, the Project or Operations. 
 \vskip 12pt
 
-Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of  the motion.   A ``majority vote" requires only half the votes received.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" members of a governance body are those whose membership is owing to their roles elsewhere in the Collaboration.  For example, the Science Council chairs (\S\ref{sec:SC}) are ex officio members of the Executive Team (\S\ref{sec:exec}).  
+Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of  the motion.   A ``majority vote" requires only half the votes received.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" members of a governance body are those whose membership is owing to their roles elsewhere in the Collaboration.  For example, the Science Council chairs (\S\ref{sec:SC}) are ex officio members of the Executive Team (\S\ref{sec:exec}).  In these bylaws,  ``Working Groups" are open to all Collaboration Members, and ``Councils" have multiple Working Groups reporting to them, while ``Committees" do not.  
 
  %The presence of a simple majority of a body's members constitutes quorum for a meeting, and two-thirds of a body must be present for a vote to be valid.
 
@@ -82,7 +82,7 @@ Throughout this document,  a ``supermajority vote" is defined as a result with m
 
 
 \section{Overall Structure}
-The governance structure of the CMB-S4 Collaboration  is illustrated in Figure~\ref{fig:org_chart}.  The Governing Board (GB) provides oversight to an \exec\ (\shorte) led by two equal co-Spokespersons.  A number of Councils, Committees and working groups carry out necessary work to enable the overall science objectives of the Collaboration. The overall scope, selection of, and interplay among these governance entities is described in the remainder of this document. 
+The governance structure of the CMB-S4 Collaboration  is illustrated in Figure~\ref{fig:org_chart}.  The Governing Board (GB) provides oversight to an \exec\ (ET) led by two equal co-Spokespersons.  A number of Councils, Committees and working groups carry out necessary work to enable the overall science objectives of the Collaboration. The overall scope, selection of, and interplay among these governance entities is described in the remainder of this document. 
 
 
 \begin{figure}[h!]
@@ -175,10 +175,11 @@ The GB appoints the chair and two additional members of the Election and Voting 
  
  
 \subsection{Amendments to the Bylaws}
-%pertaining to the Governing Board} \label{subsec:amend}
-The GB may make minor amendments to the Bylaws and ratify them with a supermajority vote.  The GB must  include a tracking cover page with the Bylaws that notes the document version history, including dates of amendments with short synopses of which sections were impacted  The current version of the Bylaws must be available on a public website, and amendments must be announced to the Collaboration as soon as the amended version is ratified.  
+%pertaining to the Governing Board} 
+\label{subsec:amend}
+The GB may make minor amendments to the Bylaws as needed.   The GB must  include a tracking cover page with the Bylaws that notes the document version history, including dates of amendments with short synopses of which sections were impacted.  The currently ratified version of the Bylaws must be available on a public website.  Each revised version must be made available to the Collaboration for review and comment for at least one month before the GB can move to ratify the amended Bylaws.  Ratification requires a supermajority of the GB.
 
-Major amendments to the Bylaws, including amendments pertaining to the election and scope of the GB itself, must be approved by a supermajority vote of the GB, and made available to the Collaboration for review and comment for at least one month.  After the review period, the Voting Members of the Collaboration must ratify the amended Bylaws with a majority vote. 
+Major amendments to the Bylaws, including amendments pertaining to the election and scope of the GB itself,  must be ratified by the Collaboration.  The proposed amendments must be approved by a supermajority vote of the GB, and made available to the Collaboration for review and comment for at least one month.  After the review period, the Voting Members of the Collaboration can  ratify the amended Bylaws with a majority vote. 
 
 \section{Co-Spokespersons}
 \label{sec:spokes}
@@ -345,17 +346,17 @@ Four of the organizational structures overseen by the Spokespersons have represe
 \subsection{Science Council and Analysis Working Groups}
 \label{sec:SC}
 
-The Science Council works closely with the Spokespersons to coordinate the key scientific objectives of the Collaboration.  The Science Council is led by two co-chairs elected by the Voting Members of the Collaboration, who also serve as members of the \exec.  The remaining members of the Science Council are the co-coordinators of the various analysis working groups. These working groups  will be formally established by the Spokespersons. 
+The Science Council works closely with the Spokespersons to coordinate the key scientific objectives of the Collaboration.  The Science Council is led by two co-chairs elected by the Voting Members of the Collaboration, who also serve as members of the \exec.  The remaining members of the Science Council are the co-coordinators of the various Analysis Working Groups. These Working Groups are open to all Collaboration Members, and will be formally established by the Spokespersons. 
 
 The Science Council approves the projects that lead to publications and is responsible for maintaining a list of Key Science topics  (\S\ref{sec:pubs}).
 
-Each analysis working group will have two co-coordinators who each serve for two year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future.  The Science Council chairs will solicit self-nominations for these co-coordinators positions. The Spokespersons will appoint coordinators with the advice of the Science Council chairs while considering the distribution of early and late career members when making these appointments. Coordinators will ordinarily not serve back-to-back terms.
+Each Analysis Working Group will have two co-coordinators who  serve for two-year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future.  The Science Council chairs will solicit self-nominations for these co-coordinator positions. The Spokespersons will appoint coordinators with the advice of the Science Council chairs, and will consider the distribution of early and late career members when making these appointments. Coordinators will ordinarily not serve back-to-back terms.
 
 
 \subsection{Technical Council and Technical Working Group}
-The Technical Council works closely with the Spokespersons to coordinate the technical aspects needed to meet the scientific objectives of the Collaboration.  The Technical Council is led by two co-chairs appointed by the Spokespersons.  The two chairs serve as members of the \exec.   The co-coordinators of the various technical working groups are all members of the TC.  These working groups are to be formally established by the Co-spokespersons.   
+The Technical Council works closely with the Spokespersons to coordinate the technical aspects needed to meet the scientific objectives of the Collaboration.  The Technical Council is led by two co-chairs appointed by the Spokespersons.  The two chairs serve as members of the \exec.   The co-coordinators of the various Technical Working Groups are all members of the TC.   These Working Groups are open to all Collaboration Members, and will be formally established by the Spokespersons.   
 
-Each working group will have two co-coordinators who each serve for two-year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future, as needed.  The Technical Council chairs will solicit self-nominations for these co-coordinator positions. The Co-spokespersons will appoint coordinators with the advice of the Technical Council chairs while considering the distribution of early and late career members when making these appointments.
+Each Technical Working Group will have two co-coordinators who serve for two-year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future, as needed.  The Technical Council chairs will solicit self-nominations for these co-coordinator positions. The Co-spokespersons will appoint coordinators with the advice of the Technical Council chairs, and will consider the distribution of early and late career members when making these appointments.
 
 We anticipate the role of and/or the need for the Technical Council will be readdressed in these Bylaws when a Project is formed.
 
@@ -371,7 +372,7 @@ The duties of the MC  are to review and evaluate membership applications, review
 
 \subsection{Publication and Speakers  Committee}
 \label{sec:pubcouncil}
-The Publication and Speakers Committee (PSC) consists of thirteen people including a chair. The chair is elected following the election cycle of the Collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. There are two sub-committees which together comprise the PSC: the Publications Board with eight Collaboration members and the Speakers Bureau with four Collaboration members. These twelve members are appointed by the \shorte\ with the same term limits.  Roughly half of each group should be pre-tenure. If a PMC member leaves before their term is complete, the \shorte\ will appoint a replacement to finish out their term.  PSC members can be removed by a supermajority of the GB at any time.  
+The Publication and Speakers Committee (PSC) consists of thirteen people including a chair. The chair is elected following the election cycle of the Collaboration with  two-year terms, and is limited to two consecutive terms with one year off required before standing again. There are two sub-committees which together comprise the PSC: the Publications Board with eight Collaboration members and the Speakers Bureau with four Collaboration members. These twelve members are appointed by the \shorte\ with the same term limits.  Roughly half of each group should be pre-tenure. If a PSC member leaves before their term is complete, the \shorte\ will appoint a replacement to finish out their term.  PSC members can be removed by a supermajority of the GB at any time.  
  
 
 
@@ -386,11 +387,11 @@ The role of the Junior Scientist Advancement Committee (JSAC) is to ensure that 
 
 The role of the External Collaborators Committee (ECC) is to provide the necessary link to external follow-up observations or survey data that required to maximize the science return from CMB-S4. The ECC chair and deputy chair are appointed by the \shorte after the elections and serve terms that parallel those of the elected Collaboration positions. The chair will appoint additional members as required to ensure adequate knowledge of the collaborations being pursued resides in the ECC. Self nominations for consideration of ECC are expected. 
 
-The committee will draft all the necessary documents for external collaboration agreements and memorandums of understanding (MOUs). These will be presented to the co-spokespersons and \shorte who have ability the amend and alter these agreements and MOUs as they chose. Such agreements are then brought forward by the co-spokespersons to the Governing Board for final approval. \Comment{This might also fall under Project management.}
+The committee will draft all the necessary documents for external collaboration agreements and memorandums of understanding (MOUs). These will be presented to the Spokespersons and the  \shorte who have ability the amend and alter these agreements and MOUs as they chose. Such agreements are then brought forward by the Spokespersons to the GB for final approval. %\Comment{This might also fall under Project management.}
 
 \subsection{Education and Outreach Committee}
 
-The Education and Public Outreach (EPO) committee is responsible for initiating, overseeing, and recording the Collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate Collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the \shorte after solicitation of nominations from the full Collaboration. The chair is appointed by the co-spokespersons. Terms on the EPO follow the election cycles. A presentation of EPO efforts and written documentation of activities must be provided to the \shorte at each Collaboration meeting or when requested by the \shorte. 
+The Education and Public Outreach (EPO) Committee is responsible for initiating, overseeing, and recording the Collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate Collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the \shorte after solicitation of nominations from the full Collaboration. The chair is appointed by the Spokespersons. Terms on the EPO Committee are for two years, with some initial three-year terms to allow staggered appointments.   A presentation of EPO efforts and written documentation of activities must be provided to the \shorte at each Collaboration meeting or when requested by the \shorte. 
 
 \section{Membership Policy}
 
@@ -537,7 +538,7 @@ Projects led by thesis students will be given special consideration to protect t
 
 Work on Collaboration data should apply toward a Collaboration project: failure to submit a project at its initiation, or writing a paper on internal Collaboration data for submission when the data become public, will be considered a violation of the policy.  The same general type of analysis on subsequent observing seasons or data releases will be considered separate projects.
 
-After discussion, resolution of conflicts, and consensus within the Working Group, the Working Group coordinators will submit the project to the Science Council with a project category recommendation as a Key Project, non-key project, or theory forecast / technical report.  At this time the Working Group coordinators will announce the proposal to the Collaboration for a two-week consideration period, for discussion and further resolution of conflicts.  Addressing overlap among projects may require revision of the proposed project, and will be negotiated by the Working Group coordinators, publication-project leaders, and Spokespersons.  Any Collaboration Members that wish to make a defined and useful contribution to the project are welcome to join the team.  Disputes will be settled by the Working Group coordinators and Spokespersons as needed.  
+After discussion, resolution of conflicts, and consensus within the Working Group, the Working Group coordinators will submit the project to the Science Council with a project category recommendation as a Key Project, non-key project, or theory forecast / technical report.  At this time the Working Group coordinators will announce the proposal to the Collaboration for a two-week consideration period, for discussion and further resolution of conflicts.  Addressing overlap among projects may require revision of the proposed project, and will be negotiated by the Working Group coordinators, publication-project leaders, and Spokespersons.  Any Collaboration Members that wish to make defined and useful contributions to the project are welcome to join the team.  Disputes will be settled by the Working Group coordinators and Spokespersons as needed.  
 
 The Science Council may then approve the project or send it back to the Working Group for further revision.  In the event of a tie vote in the Science Council, the project is sent back.  When approved, the Publication Board will record the proposal in its project database, including its project category.  If there is any substantial change in the scope of a project as it matures, the Project Leader should adjust the project description accordingly, which will result in a new announcement and opportunity for Collaboration review.  After the definition of a project, its category can be reclassified only by unanimous written agreement of the project team or by a supermajority vote of the GB.
 
