council to committees

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -107,7 +107,7 @@ Governing Board responsibilities include, but are not limited to:  %omitted "Col
 \begin{itemize}
 \item Oversight of the overall progress, status and functioning of the Collaboration.  
 
-\item Oversight of the Spokespersons and their activities.  The GB charges the Spokespersons to prepare a yearly plan for the Collaboration.  The plan must be ratified by a supermajority vote of the GB.  The GB charges the Spokespersons to carry out specific duties for the Collaboration, including, but not limited to, collaboration reviews, and reviews of the councils and committees operating under the auspices of the Spokespersons and the \exec.  The GB may require a detailed verbal, or written report from the Spokespersons on any action. The GB may remove a Spokesperson by a supermajority vote if their performance is insufficient. %See also \S\ref{sec:removal}.
+\item Oversight of the Spokespersons and their activities.  The GB charges the Spokespersons to prepare a yearly plan for the Collaboration.  The plan must be ratified by a supermajority vote of the GB.  The GB charges the Spokespersons to carry out specific duties for the Collaboration, including, but not limited to, Collaboration reviews, and reviews of the Councils and Committees operating under the auspices of the Spokespersons and the \exec.  The GB may require a detailed verbal, or written report from the Spokespersons on any action. The GB may remove a Spokesperson by a supermajority vote if their performance is insufficient. %See also \S\ref{sec:removal}.
 
 %\item Charging the Spokepersons to carry out specific duties for the collaboration, including, but not limited to, collaboration reviews, committee, and board reviews. 
 
@@ -260,7 +260,7 @@ All elected positions of the major bodies in the CMB S4 Collaboration serve two-
 %Figure~\ref{fig:elect_cycle} displays schematically the timing of the election cycles described below.  
 
 As there are restrictions on the overlap of elected officials between various governing bodies, elections are timed to provide Collaboration Members multiple opportunities to participate in Collaboration governance. 
-In a given election year the ordering proceeds as follows: elections are held first for the co-Spokespersons. Next, elections are held for the Science Council co-Chairs, Membership Council Chair and the Publication and Speakers Council Chair, as needed.  A third election is held for the Governing Board Members. 
+In a given election year the ordering proceeds as follows: elections are held first for the co-Spokespersons. Next, elections are held for the Science Council co-Chairs, Membership Committee Chair and the Publication and Speakers Committee Chair, as needed.  A third election is held for the Governing Board Members. 
 Elections for positions outside the top levels of major bodies occur when required as such officials are not prohibited from serving other elected roles. 
 
 Each candidate provides a Candidate Statement to the EVC, which makes them available to the Collaboration via the CMB-S4 internal web page prior to the balloting.   Votes are cast anonymously online by Voting Members, with the elections managed by the EVC, and timed to permit adequate time to evaluate the slates of nominees for each election and still assure the new appointments are able to take office on July 1.The EVC, in consultation with the GB,  determines the detailed timing of the balloting and determines procedures for dealing with any election situations not anticipated in the Bylaws.
@@ -404,8 +404,8 @@ and others who contribute significantly to the CMB-S4 program. Membership convey
 \noindent
 
 
-%\subsection{Membership Council}
-%The duties of the Membership Council are to review and evaluate membership applications, review annual activity reports, and recommend changes in membership status. 
+%\subsection{Membership Committee}
+%The duties of the Membership Committee are to review and evaluate membership applications, review annual activity reports, and recommend changes in membership status. 
 
 \subsection{Membership Types}
 \label{sec:memtypes}
@@ -414,7 +414,7 @@ Five types of members are defined here.
 
 \item {\bf Senior Member:} A Senior Member of the Collaboration is a member who has a permanent appointment or an appointment, that under normal circumstances can be expected to be renewed indefinitely.   This includes tenure-track appointments at universities and their equivalents elsewhere.  
 
-\item {\bf Postdoctoral Member:} A postdoc working with a Senior Member at their institution can be designated as a Postdoctoral Member by that Senior Member.  Postdocs that reside at an institution where there is no Senior Member can apply to become a Postdoctoral Member and have their application evaluated by the Membership Council on a case-by-case basis. 
+\item {\bf Postdoctoral Member:} A postdoc working with a Senior Member at their institution can be designated as a Postdoctoral Member by that Senior Member.  Postdocs that reside at an institution where there is no Senior Member can apply to become a Postdoctoral Member and have their application evaluated by the Membership Committee on a case-by-case basis. 
 
 \item {\bf Student Member:} A graduate student working with a Senior Member at their institution can be designated as a Student Member by that Senior Member.  We do not anticipate granting membership to students who are not supervised by a Senior Member.
 
@@ -432,7 +432,7 @@ Herein, ``Members'' refers to Senior, Postdoctoral, Student and Provisional Memb
 
 \begin{itemize}
 
-\item Senior and Postdoctoral Members are Voting Members.  Voting Members  have the right to vote to ratify Bylaws and amendments to Bylaws, and vote in elections for Spokespersons, Governance Board representatives, and the elected positions including the Chairs of the Science, Membership, and Publication and Speakers Councils.  %vote for representation on the Governing Board.  
+\item Senior and Postdoctoral Members are Voting Members.  Voting Members  have the right to vote to ratify Bylaws and amendments to Bylaws, and vote in elections for Spokespersons, Governance Board representatives, and the elected positions including the Chairs of the Science Council, and the Membership and Publication and Speakers Committees.  %vote for representation on the Governing Board.  
 
 \item Members have full data access, including during the proprietary period for data that are eventually released.
 
@@ -445,7 +445,7 @@ Herein, ``Members'' refers to Senior, Postdoctoral, Student and Provisional Memb
 \subsection{Membership Requirements}
 
  Members must commit effort to approved infrastructure tasks.   
-The Membership Council will work with the \exec\ to define and recommend infrastructure tasks that need filling.  
+The Membership Committee will work with the \exec\ to define and recommend infrastructure tasks that need filling.  
 Tasks can include,  for example, designing, building, and testing software, hardware, or simulations; contributing to commissioning and observations; and management tasks. 
 Just as for the hardware, we anticipate having a collaboration-wide architecture for the software.  Thus, members will be expected to comply with interface, documentation and code review requirements in support of the goals of the Collaboration.   Other ways of contributing include taking on roles in the governance, including membership on the GB, EVC, ET, or the Councils and Committees described in \S\ref{sec:councils}.
 
@@ -461,9 +461,9 @@ After the Collaboration is formed with a first set of initial members (see \S\re
 
 \item Independent postdocs not co-located with a Senior Member can apply for Postdoctoral Membership and have their application reviewed on a case-by-case basis. 
 
-\item Postdoctoral members can apply for ``Intended Senior Membership Status", which would convey that the postdoc will have Senior Membership status when preparing to move to a specified permanent appointment or an appointment that, under normal circumstances, can be expected to be renewed indefinitely.  The Membership Council will decide the requirements for achieving this status, the achievement of which grants Senior Membership at the new institution.
+\item Postdoctoral members can apply for ``Intended Senior Membership Status", which would convey that the postdoc will have Senior Membership status when preparing to move to a specified permanent appointment or an appointment that, under normal circumstances, can be expected to be renewed indefinitely.  The Membership Committee will decide the requirements for achieving this status, the achievement of which grants Senior Membership at the new institution.
 
-\item Applications are reviewed by the Membership Council. The Membership Council recommends membership to the Governing Board.  The Governing Board approves membership.
+\item Applications are reviewed by the Membership Committee. The Membership Committee recommends membership to the Governing Board.  The Governing Board approves membership.
 
 \end{itemize}
 
@@ -479,22 +479,22 @@ The Collaboration will initially consist of members that were eligible to vote o
 %\item Voted on the governance bylaws.
 %\end{itemize}
 
-Within the first year of the Collaboration's establishment, prospective members can be granted membership by successfully petitioning the Membership Council despite not satisfying the above criteria.  The Membership Council may approve such applications during the first year without action by the Governing Board.  
+Within the first year of the Collaboration's establishment, prospective members can be granted membership by successfully petitioning the Membership Committee despite not satisfying the above criteria.  The Membership Committee may approve such applications during the first year without action by the Governing Board.  
 
 The Collaboration will initially consist of members that were eligible to vote on these governance bylaws (by virtue of attendance at two or more Collaboration meetings, or a successful petition for eligibility), and cast a vote on them. 
 
 \subsection{Membership Review and Changes in Status}
-The membership status of each member will be reviewed by the Membership Council each year. 
+The membership status of each member will be reviewed by the Membership Committee each year. 
 
 \begin{itemize} 
 
-\item Each Senior Member, and each independent postdoc not co-located with a Senior Member, will submit an annual activity report to the Membership Council.  Reports of the Senior Members should include discussion of the activities of their supervisees (e.g., postdocs and students) in their report. The Membership Council will review those reports, consulting with Collaboration members and Working Group leaders as appropriate.
+\item Each Senior Member, and each independent postdoc not co-located with a Senior Member, will submit an annual activity report to the Membership Committee.  Reports of the Senior Members should include discussion of the activities of their supervisees (e.g., postdocs and students) in their report. The Membership Committee will review those reports, consulting with Collaboration members and Working Group leaders as appropriate.
 
-\item Provisional Members will submit a annual activity report to the Membership Council, which will review the report and determine whether the Provisional Member should be promoted to a Senior Member status, continue as a Provisional Member, or have their membership revoked.  Provisional Membership is intended to be a temporary status.
+\item Provisional Members will submit a annual activity report to the Membership Committee, which will review the report and determine whether the Provisional Member should be promoted to a Senior Member status, continue as a Provisional Member, or have their membership revoked.  Provisional Membership is intended to be a temporary status.
 
-\item Members leaving the Collaboration may be granted Legacy Membership upon review by the Membership Council and approval by the GB.
+\item Members leaving the Collaboration may be granted Legacy Membership upon review by the Membership Committee and approval by the GB.
 
-\item If the effort of any member over the previous year seems lacking, the Membership Council will bring this to the attention of the Spokepersons and the GB.  This can also be done at any time, should the Membership Council deem the actions of a member to have been egregious and detrimental to CMB-S4.
+\item If the effort of any member over the previous year seems lacking, the Membership Committee will bring this to the attention of the Spokepersons and the GB.  This can also be done at any time, should the Membership Committee deem the actions of a member to have been egregious and detrimental to CMB-S4.
 
 \item The Governing Board has the authority to grant or terminate all forms of membership.
 
@@ -522,7 +522,7 @@ engineering designs, and analysis pipelines. All Collaboration members agree to 
 %All Collaboration members agree to the publication policy upon joining, and if they leave the Collaboration, they are bound by it for two years afterward.
 
 \subsection{Organization}
-The execution of the policy shall be overseen by the Publication and Speakers Council and its sub-committees (\S\ref{sec:pubcouncil}). The Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Council will keep track of active Collaboration members and Legacy Members for the purposes of establishing author lists for papers.
+The execution of the policy shall be overseen by the Publication and Speakers Committee and its sub-committees (\S\ref{sec:pubcouncil}). The Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Committee will keep track of active Collaboration members and Legacy Members for the purposes of establishing author lists for papers.
 
 %The execution of the policy shall be overseen by a Publication and Speakers Committee.  There are two sub-committees: the Publications Board with eight Collaboration members and the Speakers Bureau with four Collaboration members. Roughly half of each group should be pre-tenure. The Spokespersons and Executive Team shall appoint members to these positions for staggered two-year, non-consecutive terms. The Collaboration Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Committee will keep track of active Collaboration members and legacy member for the purposes of establishing author lists for papers.
 
